--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,10 +53,9 @@ jobs:
 
     - name: Build
       run: |
-        make clean ARCH=${{ matrix.arch }}
-        make install -j$(nproc) ARCH=${{ matrix.arch }} DESTDIR=bin RENDERER_DEFAULT=opengl
-        make clean ARCH=${{ matrix.arch }}
         make install -j$(nproc) ARCH=${{ matrix.arch }} DESTDIR=bin RENDERER_DEFAULT=vulkan
+        make clean ARCH=${{ matrix.arch }}
+        make install -j$(nproc) ARCH=${{ matrix.arch }} DESTDIR=bin RENDERER_DEFAULT=opengl BUILD_SERVER=1
 
     - uses: actions/upload-artifact@v4
       with:
@@ -86,9 +85,9 @@ jobs:
 
     - name: Build
       run: |
-        make install -j$(nproc) ARCH=${{ matrix.arch }} DESTDIR=bin RENDERER_DEFAULT=opengl
-        make clean ARCH=${{ matrix.arch }} 
         make install -j$(nproc) ARCH=${{ matrix.arch }} DESTDIR=bin RENDERER_DEFAULT=vulkan
+        make clean ARCH=${{ matrix.arch }} 
+        make install -j$(nproc) ARCH=${{ matrix.arch }} DESTDIR=bin RENDERER_DEFAULT=opengl BUILD_SERVER=1
 
     - uses: actions/upload-artifact@v4
       with:
@@ -119,9 +118,9 @@ jobs:
 
     - name: Build
       run: |
-        make install -j$(nproc) ARCH=${{ matrix.arch }} DESTDIR=bin RENDERER_DEFAULT=opengl
-        make clean ARCH=${{ matrix.arch }}
         make install -j$(nproc) ARCH=${{ matrix.arch }} DESTDIR=bin RENDERER_DEFAULT=vulkan
+        make clean ARCH=${{ matrix.arch }}
+        make install -j$(nproc) ARCH=${{ matrix.arch }} DESTDIR=bin RENDERER_DEFAULT=opengl BUILD_SERVER=1
 
     - uses: actions/upload-artifact@v4
       with:
