add build and debug tooling

--- a/config/q3config.cfg
+++ b/config/q3config.cfg
@@ -17,6 +17,7 @@ seta vid_xpos "0"
 seta vid_ypos "0"
 
 // Renderer Core Settings
+seta r_modernLighting "1"          // Modern lighting always on (read-only); legacy toggles are retired.
 seta r_renderAPI "2"                // Vulkan renderer
 seta r_backend "GL3"
 seta r_ext_multisample "4"          // 4x MSAA
@@ -48,20 +49,16 @@ seta r_znear "4"
 seta r_zfar "0"
 
 // Lighting and Shadows
-seta r_dynamiclight "1"
 seta r_dlightBacks "1"
 seta r_dlightMode "1"
 seta r_dlightScale "1.0"
-seta r_shadows "2"                  // Stencil shadows
-seta r_shadowMapSize "2048"
-seta r_shadowCascades "3"
-seta r_shadowFilterMode "1"
-seta r_shadowBlur "1"
-seta r_shadowPCF "1"
-seta r_sunShadows "1"
-seta r_shadowRange "1024"
-seta r_shadowSoftness "0.5"
-seta r_shadowProjectionMode "1"
+seta rt_enable "1"
+seta rt_mode "dynamic"
+seta rt_samples "2"
+seta rt_bounces "2"
+seta rt_temporal "1"
+seta rt_denoise "1"
+seta rt_staticLights "1"
 
 // Effects and Post-Processing
 seta r_fastsky "0"
@@ -89,8 +86,11 @@ seta r_rtxReflections "0"
 seta r_rtxGlobalIllumination "0"
 seta r_rtxAmbientOcclusion "0"
 
-// Material and Surface Settings
-seta r_pbr "1"                      // PBR materials enabled
+seta r_uberTextureMaps "1"            // Enable texture sampling in uber shader
+seta r_pbrMetallic "0.0"         // Default metallic factor for uber shader
+seta r_pbrRoughness "0.6"        // Default roughness factor
+seta r_pbrAO "1.0"               // Default ambient occlusion multiplier
+seta r_pbrEmissive "0.0"         // Default emissive strength
 seta r_pbrBaseMap "1"
 seta r_pbrNormalMap "1"
 seta r_pbrSpecularMap "1"
@@ -170,7 +170,7 @@ seta r_preloadTextures "1"
 seta r_maxTextureSize "4096"
 seta r_textureAtlasSize "4096"
 
-// Debug (disabled)
+// Debug (disabled by default)
 seta r_showImages "0"
 seta r_debugSurface "0"
 seta r_debugSort "0"
@@ -178,7 +178,6 @@ seta r_printShaders "0"
 seta r_showSmp "0"
 seta r_showTris "0"
 seta r_showNormals "0"
-seta r_showLightMaps "0"
 seta r_showShadowVolumes "0"
 seta r_showVertexColors "0"
 seta r_norefresh "0"
@@ -187,6 +186,22 @@ seta r_drawworld "1"
 seta r_drawfoliage "1"
 seta r_drawsky "1"
 seta r_fastSky "0"
+
+// RTX Debug Overlay Keybindings
+// F2-F8 activate specific RTX debug visualization modes
+// F9 cycles modes, F10 toggles legend
+bind F1 "incrementvar r_uberTextureMaps 0 1 1"    // Toggle uber shader texture sampling
+bind F2 "set r_rtx_debug 1"    // RT Participation (green=RT, red=excluded)
+bind F3 "set r_rtx_debug 2"    // Material Properties (R=rough, G=metal, B=emit)
+bind F4 "set r_rtx_debug 3"    // Lighting Contributions (R=direct, G=GI, B=ambient)
+bind F5 "set r_rtx_debug 4"    // Ray Density Heatmap
+bind F6 "set r_rtx_debug 5"    // Surface Normals
+bind F7 "set r_rtx_debug 6"    // Instance IDs
+bind F8 "set r_rtx_debug 7"    // Random Verification
+bind F9 "rtx_debug_overlay cycle"    // Cycle through modes
+bind F10 "rtx_debug_overlay legend"  // Toggle legend
+bind F11 "rtx_status"                // Display RTX system status
+bind F12 "set r_rtx_debug 0"         // Turn off debug visualization
 
 // Sound Settings
 seta s_volume "0.7"
@@ -332,3 +347,5 @@ seta con_drawVersion "1"
 seta con_history "32"
 
 echo "Base Q3Config loaded - Optimized for decent gaming PC"
+
+
