--- a/config/ultra_settings.cfg
+++ b/config/ultra_settings.cfg
@@ -19,6 +19,7 @@ seta vid_xpos "0"
 seta vid_ypos "0"
 
 // Renderer Core - Maximum Quality
+seta r_modernLighting "1"          // Modern lighting always on (read-only); legacy toggles are retired.
 seta r_renderAPI "2"                // Vulkan renderer
 seta r_backend "GL3"
 seta r_ext_multisample "8"          // 8x MSAA
@@ -78,26 +79,18 @@ seta r_rtxRayRecursionDepth "8"
 seta r_rtxMaxRayDistance "100000"
 
 // Advanced Lighting and Shadows - Ultra
-seta r_dynamiclight "2"             // Enhanced dynamic lights
 seta r_dlightBacks "1"
 seta r_dlightMode "2"
 seta r_dlightScale "1.5"
 seta r_dlightIntensity "2.0"
 seta r_maxDlights "64"              // Maximum dynamic lights
-seta r_shadows "3"                  // Ray-traced shadows
-seta r_shadowMapSize "8192"         // 8K shadow maps
-seta r_shadowCascades "6"           // Maximum cascade levels
-seta r_shadowFilterMode "3"         // Ultra filtering
-seta r_shadowBlur "2"
-seta r_shadowPCF "3"                // Maximum PCF samples
-seta r_sunShadows "1"
-seta r_shadowRange "4096"
-seta r_shadowSoftness "1.0"
-seta r_shadowBias "0.001"
-seta r_shadowProjectionMode "2"
-seta r_shadowTransparency "1"
-seta r_contactShadows "1"
-seta r_contactShadowStrength "1.0"
+seta rt_enable "1"
+seta rt_mode "all"
+seta rt_samples "4"
+seta rt_bounces "3"
+seta rt_temporal "1"
+seta rt_denoise "1"
+seta rt_staticLights "1"
 
 // PBR Materials - Full Quality
 seta r_pbr "1"
@@ -335,7 +328,6 @@ seta r_printShaders "0"
 seta r_showSmp "0"
 seta r_showTris "0"
 seta r_showNormals "0"
-seta r_showLightMaps "0"
 seta r_showShadowVolumes "0"
 seta r_showVertexColors "0"
 seta r_norefresh "0"
