--- a/src/project/msvc2017/quake3e-ded.vcxproj
+++ b/src/project/msvc2017/quake3e-ded.vcxproj
@@ -303,26 +303,18 @@
     <ClCompile Include="..\..\game\server\world\sv_world.c" />
     <!-- AI Files -->
     <ClCompile Include="..\..\engine\ai\ai_interface.c" />
-    <ClCompile Include="..\..\engine\ai\behavior\ai_char.c" />
-    <ClCompile Include="..\..\engine\ai\behavior\ai_chat.c" />
-    <ClCompile Include="..\..\engine\ai\behavior\ai_ea.c" />
-    <ClCompile Include="..\..\engine\ai\behavior\ai_gen.c" />
-    <ClCompile Include="..\..\engine\ai\behavior\ai_goal.c" />
-    <ClCompile Include="..\..\engine\ai\behavior\ai_move.c" />
-    <ClCompile Include="..\..\engine\ai\behavior\ai_weap.c" />
-    <ClCompile Include="..\..\engine\ai\behavior\ai_weight.c" />
-    <ClCompile Include="..\..\engine\ai\navigation\aas_bspq3.c" />
-    <ClCompile Include="..\..\engine\ai\navigation\aas_cluster.c" />
-    <ClCompile Include="..\..\engine\ai\navigation\aas_debug.c" />
-    <ClCompile Include="..\..\engine\ai\navigation\aas_entity.c" />
-    <ClCompile Include="..\..\engine\ai\navigation\aas_file.c" />
-    <ClCompile Include="..\..\engine\ai\navigation\aas_main.c" />
-    <ClCompile Include="..\..\engine\ai\navigation\aas_move.c" />
-    <ClCompile Include="..\..\engine\ai\navigation\aas_optimize.c" />
-    <ClCompile Include="..\..\engine\ai\navigation\aas_reach.c" />
-    <ClCompile Include="..\..\engine\ai\navigation\aas_route.c" />
-    <ClCompile Include="..\..\engine\ai\navigation\aas_routealt.c" />
-    <ClCompile Include="..\..\engine\ai\navigation\aas_sample.c" />
+    <ClCompile Include="..\..\game\ai\ai_main.c" />
+    <ClCompile Include="..\..\game\ai\ai_implementation.c" />
+    <ClCompile Include="..\..\game\ai\character\bot_character.c" />
+    <ClCompile Include="..\..\game\ai\neural\nn_core.c" />
+    <ClCompile Include="..\..\game\ai\learning\rl_ppo.c" />
+    <ClCompile Include="..\..\game\ai\learning\skill_adaptation.c" />
+    <ClCompile Include="..\..\game\ai\tactical\tactical_combat.c" />
+    <ClCompile Include="..\..\game\ai\tactical\cover_system.c" />
+    <ClCompile Include="..\..\game\ai\tactical\movement_tactics.c" />
+    <ClCompile Include="..\..\game\ai\strategic\strategic_planning.c" />
+    <ClCompile Include="..\..\game\ai\team\team_coordination.c" />
+    <ClCompile Include="..\..\game\ai\perception\ai_perception.c" />
     <ClCompile Include="..\..\engine\ai\util\crc.c" />
     <ClCompile Include="..\..\engine\ai\util\libvar.c" />
     <ClCompile Include="..\..\engine\ai\util\log.c" />
