--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Build
       shell: cmd
       run: |
-        make install -j%NUMBER_OF_PROCESSORS% ARCH=${{ matrix.arch }} DESTDIR=bin BUILD_SERVER=1
+        make install -j%NUMBER_OF_PROCESSORS% ARCH=${{ matrix.arch }} DESTDIR=bin
 
     - uses: actions/upload-artifact@v4
       with:
@@ -61,9 +61,11 @@ jobs:
         if-no-files-found: error
         retention-days: 5
         
-  ubuntu:
-    name: Release Unix ${{ matrix.arch }}
-    runs-on: ubuntu-22.04
+  linux:
+    name: Release Linux ${{ matrix.arch }}
+    runs-on: ubuntu-latest
+    container:
+      image: debian:bookworm
     strategy:
       fail-fast: false
       matrix:
@@ -73,8 +75,9 @@ jobs:
 
     - name: Install tools
       run: |
-        sudo apt-get -qq update
-        sudo apt-get -y install libcurl4-openssl-dev mesa-common-dev libxxf86dga-dev libxrandr-dev libxxf86vm-dev libasound-dev libsdl2-dev libopenal-dev
+        apt-get -qq update
+        apt-get -y install git build-essential
+        apt-get -y install libcurl4-openssl-dev mesa-common-dev libxxf86dga-dev libxrandr-dev libxxf86vm-dev libasound-dev libsdl2-dev libopenal-dev
 
     - uses: actions/checkout@v4
       with:
@@ -91,9 +94,11 @@ jobs:
         if-no-files-found: error
         retention-days: 5
 
-  ubuntu-arm:
-    name: Release Unix ${{ matrix.arch }}
-    runs-on: ubuntu-22.04-arm
+  linux-arm:
+    name: Release Linux ${{ matrix.arch }}
+    runs-on: ubuntu-24.04-arm
+    container:
+      image: debian:bookworm
     strategy:
       fail-fast: false
       matrix:
@@ -103,9 +108,9 @@ jobs:
 
     - name: Install tools
       run: |
-        sudo apt-get -qq update
-        sudo apt-get install -y make gcc g++
-        sudo apt-get -y install libcurl4-openssl-dev mesa-common-dev libxxf86dga-dev libxrandr-dev libxxf86vm-dev libasound-dev libsdl2-dev libopenal-dev
+        apt-get -qq update
+        apt-get -y install git build-essential
+        apt-get -y install libcurl4-openssl-dev mesa-common-dev libxxf86dga-dev libxrandr-dev libxxf86vm-dev libasound-dev libsdl2-dev libopenal-dev
 
     - uses: actions/checkout@v4
       with:
@@ -153,7 +158,7 @@ jobs:
 
   create-testing:
     if: github.ref == 'refs/heads/master' && github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-    needs: [windows, ubuntu, ubuntu-arm, macos]
+    needs: [windows, linux, linux-arm, macos]
     runs-on: ubuntu-24.04
     steps:
       - name: Download Artifacts
